# periodicISDFBenchmarks

./: README.md  pyproject.toml
jupyter/: parse_helper.py  plot_helper.py  reference_analysis.ipynb  silicon_qindependent_isdf.ipynb  silicon_testing.ipynb  strong_scaling.ipynb
periodic_isdf_benchmarks/input/: inp_gen.py  oct_ase.py
periodic_isdf_benchmarks/parser/: exchange_energy.py  parse_dir.py  parse_inp.py  profiling.py  static.py  stdout.py
periodic_isdf_benchmarks/submission/: remote.py  slurm.py
qindependent/: generate_inputs.py  main.py  parse_result.py
