[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "periodic-isdf-benchmark"
version = "0.0.1"
description = "Benchmark helpers for periodic ISDF experiments."
authors = [{ name = "Alex Buccheri" }]
requires-python = ">=3.10"
dependencies = [
  "jupyter",
  "matplotlib",
  "numpy",
  "pandas",
  "postopus",
]

[dependency-groups]
dev = [
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.1.8",
  "numpy>=2.0.0"
]

[tool.uv]
package = true

[tool.uv.sources]
postopus = { path = "../libraries/postopus", editable = true }

[tool.setuptools.packages.find]
include = ["periodic_isdf_benchmarks*", "qindependent*"]

[tool.ruff]
src = ["jupyter", "periodic_isdf_benchmarks", "qindependent"]

[tool.ruff.lint]
ignore = [
  "E501",  # line too long
  "E731",  # allow named lambdas
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["jupyter", "periodic_isdf_benchmarks", "qindependent"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --doctest-modules"
testpaths = ["tests"]
